[package]
name = "yacrypt"
version = "0.0.1"
edition = "2021"
authors = ["double12gzh"]
license = "MIT"
description = "Ultra secure encryption/decryption tool using Rust + libsodium with zero secret leakage."
categories = ["security", "cryptography"]
keywords = ["encryption", "sodium", "crypto"]
repository = "https://github.com/double12gzh/YaCrypt"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12.0"
ed25519-dalek = { version = "2.1", features = ["pkcs8", "zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hex = "0.4"
hkdf = "0.12"
libc = "0.2"
pkcs8 = { version = "0.10", features = ["alloc"] }
rand = "0.8.0"
sha2 = "0.10"
tempfile = "3.10"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

[features]
default = []

[lints.clippy]
# 允许的 clippy 检查
module_inception = "allow"
new_without_default = "allow"
